[gd_scene load_steps=33 format=3 uid="uid://y8bhjn2l02rd"]

[ext_resource type="Script" path="res://Farmer/Farmer.gd" id="1_634xk"]
[ext_resource type="Texture2D" uid="uid://c5ug182ks2mot" path="res://Farmer/player.png" id="2_ylw2c"]
[ext_resource type="Script" path="res://Farmer/ConsumeHurtBox.gd" id="6_ltg7i"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1qbq0"]
radius = 3.0
height = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sju3n"]
radius = 18.0278

[sub_resource type="Animation" id="Animation_i8fs0"]
resource_name = "idle_down"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_8inma"]
resource_name = "idle_left"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 2)]
}

[sub_resource type="Animation" id="Animation_d8fjs"]
resource_name = "idle_right"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_nh74u"]
resource_name = "idle_up"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}

[sub_resource type="Animation" id="Animation_gwb07"]
resource_name = "walk_down"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_gueqf"]
resource_name = "walk_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2)]
}

[sub_resource type="Animation" id="Animation_rjtqh"]
resource_name = "walk_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_nwa0a"]
resource_name = "walk_up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vd0ks"]
_data = {
"idle_down": SubResource("Animation_i8fs0"),
"idle_left": SubResource("Animation_8inma"),
"idle_right": SubResource("Animation_d8fjs"),
"idle_up": SubResource("Animation_nh74u"),
"walk_down": SubResource("Animation_gwb07"),
"walk_left": SubResource("Animation_gueqf"),
"walk_right": SubResource("Animation_rjtqh"),
"walk_up": SubResource("Animation_nwa0a")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e3tye"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0tlpg"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n26sm"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kkjsw"]
animation = &"idle_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_v08rn"]
blend_point_0/node = SubResource("AnimationNodeAnimation_e3tye")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_0tlpg")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_n26sm")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_kkjsw")
blend_point_3/pos = Vector2(1, 0)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gogy4"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u4kyn"]
animation = &"walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b7xfp"]
animation = &"walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7ib4i"]
animation = &"walk_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_ixfc3"]
blend_point_0/node = SubResource("AnimationNodeAnimation_gogy4")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_u4kyn")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_b7xfp")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_7ib4i")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_f2kph"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hdi5m"]
advance_mode = 2
advance_expression = "velocity.length() >01"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rcd6q"]
advance_mode = 2
advance_expression = "velocity.length() <=0"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_0drnt"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_v08rn")
states/Idle/position = Vector2(361, 100)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_ixfc3")
states/Walk/position = Vector2(680, 97)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_f2kph"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_hdi5m"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_rcd6q")]
graph_offset = Vector2(106, 19.5187)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_rrf8u"]

[sub_resource type="Animation" id="Animation_0g2op"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.2]
}

[sub_resource type="Animation" id="Animation_pu4gy"]
resource_name = "show_text"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.2, 1.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fimij"]
_data = {
"RESET": SubResource("Animation_0g2op"),
"show_text": SubResource("Animation_pu4gy")
}

[node name="Farmer" type="CharacterBody2D"]
script = ExtResource("1_634xk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_1qbq0")

[node name="FarmerHurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="FarmerHurtBox"]
visible = false
shape = SubResource("CircleShape2D_sju3n")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -9)
texture = ExtResource("2_ylw2c")
hframes = 4
vframes = 4

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
rotation_smoothing_enabled = true
editor_draw_screen = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vd0ks")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_0drnt")
anim_player = NodePath("../AnimationPlayer")
advance_expression_base_node = NodePath("..")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_rrf8u")
parameters/Idle/blend_position = Vector2(0, 0.5131)
parameters/Walk/blend_position = Vector2(-0.594545, 0.479672)

[node name="in_font_player_position" type="Marker2D" parent="."]
visible = false

[node name="z_index_5" type="Node2D" parent="."]

[node name="ConsumeHurtBox" type="Control" parent="z_index_5"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -11.0
offset_top = -25.0
offset_right = 12.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("6_ltg7i")

[node name="conversation" type="Label" parent="z_index_5"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.0
offset_top = -28.0
offset_right = 7.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 6
text = "54564"
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 0
visible_characters_behavior = 3
visible_ratio = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="z_index_5/conversation"]
libraries = {
"": SubResource("AnimationLibrary_fimij")
}

[connection signal="stamina_changed" from="." to="." method="_on_stamina_changed"]
